@@ -45,11 +45,8 @@ LISPSYM(letstern,"LET*",lisp)
 LISPSYM(locally,"LOCALLY",lisp)
 LISPSYM(compiler_let,"COMPILER-LET",ext)
 LISPSYM(progv,"PROGV",lisp)
-LISPSYM(pflet,"%FLET",system)
 LISPSYM(flet,"FLET",lisp)
-LISPSYM(plabels,"%LABELS",system)
 LISPSYM(labels,"LABELS",lisp)
-LISPSYM(pmacrolet,"%MACROLET",system)
 LISPSYM(macrolet,"MACROLET",lisp)
 LISPSYM(function_macro_let,"FUNCTION-MACRO-LET",system)
 LISPSYM(symbol_macrolet,"SYMBOL-MACROLET",lisp)
